# Agent

./: .gitignore  .repomixignore  AGENTS.md  README.md  pyproject.toml  repomix.config.json
.github/workflows/: agent-release.yml
docs/: ai-context-optimization.md
src/mcctl_agent/: __init__.py  __main__.py  api.py  autostart.py  config.py  file_admin.py  java.py  main.py  minecraft.py  operations.py  runtime.py  server_setup.py  service.py
tests/: test_autostart.py  test_config_defaults.py  test_file_admin.py  test_operations_automation.py  test_runtime_foundation.py  test_runtime_polish.py  test_server_setup.py  test_service.py
