[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcctl-agent"
version = "0.1.1"
description = "MCCTL local CLI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.2",
  "websockets>=16.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.5.7"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
mcctl-agent = "mcctl_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
